# mxitc

./: CMakeLists.txt  LICENSE  Makefile  README.markdown  TODO.markdown  example.captcha  main.cpp  moc_mxit.cpp  mxit.h  mxit_client  mxit_client.pro
docs/building/: Linux.markdown  Mac.markdown  UNIX.markdown  Windows.markdown
src/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui  main.cpp  mxit.cpp  mxit.h
src/common/: actions.h  chat_session.cpp  chat_session.h  contact.cpp  contact.h  gui_states.h  hash_variables.cpp  hash_variables.h  qubytearray.h  types.h
src/gui/: chat_area.cpp  chat_area.h  chat_area.ui  chat_area_controller.cpp  chat_area_controller.h  chat_session.cpp  chat_session.h  common.h  contact.cpp  contact.h  contact_metadata.cpp  contact_metadata.h  conversations_tab_widget.cpp  conversations_tab_widget.h  conversations_widget.cpp  conversations_widget.h  conversations_widgets_controller.cpp  conversations_widgets_controller.h  debugWidget.cpp  debugWidget.h  debugWidget.ui  dialog.cpp  dialog.h  dialog.ui  emoticon.cpp  emoticon.h  first_run_wizard.cpp  first_run_wizard.h  first_run_wizard.ui  login.cpp  login.h  login.ui  message.cpp  message.h  mxit_dialog.cpp  mxit_dialog.h  mxit_dock_widget.cpp  mxit_dock_widget.h  mxitc.cpp  mxitc.h  (+3 more)
src/gui/conversations_components/: controller.cpp  controller.h  tab_widget.cpp  tab_widget.h
src/gui/dialogs/: addContact.cpp  addContact.h  addContact.ui  allow_subscription.cpp  allow_subscription.h  allow_subscription.ui  debug_dialog.cpp  debug_dialog.h  debug_dialog.ui  login.cpp  login.h  login.ui  register.cpp  register.h  register.ui  register_gateway.cpp  register_gateway.h  register_gateway.ui  start_group_chat.cpp  start_group_chat.h  start_group_chat.ui  update_contact_info.cpp  update_contact_info.h  update_contact_info.ui  update_group_name.cpp  update_group_name.h  update_group_name.ui
src/gui/dock_widgets/: add_contact.cpp  add_contact.h  add_contact.ui  chat_sessions.cpp  chat_sessions.h  chat_sessions.ui  contacts.cpp  contacts.h  contacts.ui  conversations.cpp  conversations.h  conversations.ui  debug.cpp  debug.h  log.cpp  log.h  log.ui  options.cpp  options.h  options.ui  profile.cpp  profile.h  profile.ui
src/gui/theme/: presence.cpp  presence.h
src/gui/theme_components/: chat.cpp  chat.h  presence.cpp  presence.h
src/gui/theme_components/contact/: base.cpp  base.h  presence.cpp  presence.h  type.cpp  type.h
src/gui/widgets/: conversation.cpp  conversation.h  login_settings.cpp  login_settings.h  login_settings.ui  profile_settings.cpp  profile_settings.h  profile_settings.ui
src/mxit/: address_book.cpp  address_book.h  aes.cpp  aes.h  client.cpp  client.h  contact.cpp  contact.h  conversation.cpp  conversation.h  conversations.cpp  conversations.h  message.cpp  message.h
src/network/: connection.cpp  connection.h  gateway.cpp  gateway.h  http_packet.cpp  http_packet.h  httpcomm.cpp  httpcomm.h  packet.cpp  packet.h  tcp_packet.cpp  tcp_packet.h
src/network/packets/: http.cpp  http.h  http_packet.h  tcp.cpp  tcp.h  tcp_packet.cpp  tcp_packet.h
src/protocol/: aes.h  commands.h  error_codes.h  handler.cpp  handler.h  handshaker.cpp  handshaker.h  message_type.h  packet_header.cpp  packet_header.h
src/protocol/enumerables/: chunked_data.h  contact.h  message.h  mood.h  presence.h
src/protocol/handlers/: 01_login.cpp  01_login.h  02_logout.cpp  02_logout.h  03_getcontacts.cpp  03_getcontacts.h  05_updatecontact.cpp  05_updatecontact.h  05_updatecontactinfo.cpp  05_updatecontactinfo.h  06_addcontact.cpp  06_addcontact.h  06_subscribetoanewcontact.cpp  06_subscribetoanewcontact.h  08_removecontact.cpp  08_removecontact.h  09_getmessages.cpp  09_getmessages.h  09_getnewmessages.cpp  09_getnewmessages.h  10_sendnewmessage.cpp  10_sendnewmessage.h  11_register.cpp  11_register.h  12_updateprofile.cpp  12_updateprofile.h  17_polldifference.cpp  17_polldifference.h  1k_keepalive.cpp  1k_keepalive.h  26_getprofile.cpp  26_getprofile.h  27_getmultimediamessage.cpp  27_getmultimediamessage.h  29_renamegroup.cpp  29_renamegroup.h  30_removegroup.cpp  30_removegroup.h  31_splashscreenclickthrough.cpp  31_splashscreenclickthrough.h  (+25 more)
src/var/: test.qss
